Updated readme, fixed camera preview position, additional spacing for filter selection

--- a/style.scss
+++ b/style.scss
@@ -28,13 +28,13 @@ body{
   position: relative;
   overflow: hidden;
   top: 50vh;
+  transform: translateY(-50%);
     
   #video-preview {
     min-height: 100%;
     min-width: 100%;
     object-fit: cover;
     object-position: center;
-    transform: rotateY(180deg);
   }
 
   #grid{
@@ -76,6 +76,7 @@ footer{
     width: 100%;
     overflow-x: auto;
     scrollbar-width: none;
+    padding: 0 1rem;
   
     &::-webkit-scrollbar {
       display: none;
